package app

const (
	ApplicationNameTag = "application"
	BlockChainNameTag  = "blockchain_name"

	WalletTitleTag               = "title"
	WalletUUIDTag                = "wallet_uuid"
	MnemonicWalletUUIDTag        = "mnemonic_wallet_uuid"
	MnemonicWalletSessionUUIDTag = "mnemonic_wallet_session_uuid"
	MnemonicWalletHashTag        = "mnemonic_wallet_hash"
	WalletPurposeTag             = "purpose"
	WalletIsHotTag               = "is_hot"

	SignRequestUUIDTag = "sign_request_uuid"
	GRPCBindPortTag    = "grpc_bind_port"

	TickerEventTriggerTimeTag = "ticker_time"

	HDWalletAccountIndexTag  = "hd_wallet_account_index"
	HDWalletInternalIndexTag = "hd_wallet_internal_index"
	HDWalletAddressIndexTag  = "hd_wallet_address_index"
	HDWalletAddressTag       = "hd_wallet_address"

	NatsCacheBucketNameTag = "nats_kv_bucket_name"
)
